[package]
name = "boost_metaparse"
description = "Boost C++ library boost_metaparse packaged using Zanbil"
version = "0.1.0"
edition = "2024"
links = "boost_metaparse"
license = "BSL-1.0"
repository = "https://github.com/zanbilify/boost_metaparse"

[package.metadata.zanbil]
make_dependencies_public = true

[dependencies]
boost_config = { version = "0.1.0", path = "../boost_config" }
boost_mpl = { version = "0.1.0", path = "../boost_mpl" }
boost_predef = { version = "0.1.0", path = "../boost_predef" }
boost_preprocessor = { version = "0.1.0", path = "../boost_preprocessor" }
boost_static_assert = { version = "0.1.0", path = "../boost_static_assert" }
boost_type_traits = { version = "0.1.0", path = "../boost_type_traits" }

[build-dependencies]
zanbil-boost-build = "0.1.0"
